# unix_exec_piper

./: .gitignore  Cargo.toml  README.md
src/: data.rs  lib.rs  libc_util.rs  pipe.rs
